# gap

./: CMakeLists.txt
client/: CMakeLists.txt  main.cpp
cmake/: UseODB.cmake
include/: exceptions.h
server/: CMakeLists.txt  actions.cpp  db_authenticator.cpp  main.cpp  persistent_authenticator.cpp  server.cpp  volatile_authenticator.cpp
server/include/: actions.h  authenticator.h  client.h  db_authenticator.h  persistent_authenticator.h  server.h  volatile_authenticator.h
server/include/db/: user.h
